<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/Btn_7"
            android:text="@string/Value_7"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_8"
            android:text="@string/Value_8"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_9"
            android:text="@string/Value_9"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/Btn_4"
            android:text="@string/Value_4"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_5"
            android:text="@string/Value_5"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_6"
            android:text="@string/Value_6"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/Btn_1"
            android:text="@string/Value_1"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_2"
            android:text="@string/Value_2"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_3"
            android:text="@string/Value_3"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/Btn_0"
            android:text="@string/Value_0"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_point"
            android:text="@string/Value_point"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_clear"
            android:text="@string/Value_clear"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/Btn_next"
            android:text="@string/Value_next"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_margin="1dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>